<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_220sdp"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:padding="@dimen/_2sdp"
            android:id="@+id/deleteBtn"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/delete_item"
            android:src="@drawable/ic_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:padding="@dimen/_2sdp"

            android:id="@+id/likeBtn"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:contentDescription="@string/like_item"
            android:src="@drawable/ic_deslike"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:contentDescription="@string/ItemName"
            android:padding="@dimen/_5sdp"
            app:layout_constraintBottom_toTopOf="@id/itemName"
            app:layout_constraintTop_toBottomOf="@id/deleteBtn" />

        <TextView

            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/kDarkGray"
            app:layout_constraintBottom_toTopOf="@id/itemPrice" />

        <TextView

            android:id="@+id/itemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/kMainColor"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>